Alignment fixed

--- a/src/styles/indexAcc.css
+++ b/src/styles/indexAcc.css
@@ -155,6 +155,8 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    margin-right: 0;
+    margin-left: auto;
 }
 
 .right-sidebar-button {
